# ChangeLog for net-irc/telepathy-idle
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/telepathy-idle/ChangeLog,v 1.52 2013/04/24 18:46:56 pacho Exp $

*telepathy-idle-0.1.15 (24 Apr 2013)

  24 Apr 2013; Pacho Ramos <pacho@gentoo.org> +telepathy-idle-0.1.15.ebuild,
  -files/telepathy-idle-0.1.12-parallel-make.patch,
  -telepathy-idle-0.1.11.ebuild, -telepathy-idle-0.1.12.ebuild:
  Version bump, drop old

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for ia64, wrt bug #458984

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for arm, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for ppc, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> telepathy-idle-0.1.14.ebuild:
  Stable for amd64, wrt bug #458984

*telepathy-idle-0.1.14 (17 Nov 2012)

  17 Nov 2012; Pacho Ramos <pacho@gentoo.org> +telepathy-idle-0.1.14.ebuild:
  Version bump

  22 Sep 2012; Pacho Ramos <pacho@gentoo.org>
  +files/telepathy-idle-0.1.12-parallel-make.patch,
  telepathy-idle-0.1.12.ebuild:
  Fix parallel make issue, bug #435524 by Attila Tóth.

*telepathy-idle-0.1.12 (15 Sep 2012)

  15 Sep 2012; Pacho Ramos <pacho@gentoo.org> +telepathy-idle-0.1.12.ebuild,
  -telepathy-idle-0.1.10.ebuild:
  Version bump, drop old.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> telepathy-idle-0.1.10.ebuild,
  telepathy-idle-0.1.11.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
