@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/telepathy-idle
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/telepathy-idle/ChangeLog,v 1.52 2013/04/24 18:46:56 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/telepathy-idle/ChangeLog,v 1.53 2013/05/01 17:31:15 pacho Exp $
+
+*telepathy-idle-0.1.16 (01 May 2013)
+
+  01 May 2013; Pacho Ramos <pacho@gentoo.org> +telepathy-idle-0.1.16.ebuild:
+  Version bump
 
 *telepathy-idle-0.1.15 (24 Apr 2013)
 
